[package]
name = "unicode_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
iter-read = "0.3.1"
colored = "2"
pancurses = "0.17"
termion = "*"
clap = { version = "3.1.2", features = ["derive"] }
hex-literal = "0.3.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
serde_json = "1.0"
urlencoding = "2.1.2"
#google-youtube3 = "4.0.1+20220303"
#hyper = "0.14.20"
#hyper-rustls = "0.23.0"
lazy_static = "1.4.0"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.5"